# esis

./: .gitignore  README.md  pyproject.toml
.github/workflows/: black.yml  docs.yml  nbstripout.yml  preview_cleanup.yml  ruff.yml  tests.yml
docs/: Makefile  conf.py  index.rst  make.bat  refs.bib  roadmap.rst  schedule.rst
docs/_templates/: function_custom.rst
docs/reports/: aia-image-simulation.ipynb  distortion-fit.ipynb  foo.ipynb  image-simulation.ipynb  level-0.ipynb  level-1.ipynb  mart-esis.ipynb  mart-iris.ipynb  point-spread-function.ipynb  throughput.ipynb
docs/reports/f2/: design.ipynb  grating.ipynb
esis/: __init__.py  _caching.py
esis/data/: __init__.py
esis/data/_level_0/: __init__.py  _level_0.py  _level_0_test.py
esis/data/_level_1/: __init__.py  _level_1.py  _level_1_test.py
esis/data/abc/: __init__.py  _channel_data.py  _channel_data_test.py
esis/data/synth/: __init__.py
esis/data/synth/_scene_aia/: _scene_aia.py  _scene_aia_test.py
esis/data/synth/_scene_iris/: _scene_iris.py
esis/data/synthetic/: __init__.py
esis/data/synthetic/_scene_aia/: __init__.py  _scene_aia.py  _scene_aia_test.py
esis/flights/: __init__.py
esis/flights/f1/: __init__.py
esis/flights/f1/data/: __init__.py
esis/flights/f1/data/_fits/: __init__.py  _fits.py  _fits_test.py
esis/flights/f1/data/_level_0/: __init__.py  _level_0.py  _level_0_test.py
esis/flights/f1/data/_level_1/: __init__.py  _level_1.py  _level_1_test.py
esis/flights/f1/data/synth/: __init__.py
esis/flights/f1/nsroc/: __init__.py
esis/flights/f1/nsroc/_timeline/: __init__.py  _timeline.py  _timeline_test.py
esis/flights/f1/optics/: __init__.py
esis/flights/f1/spectrum/: He_I.py  Mg_X.py  O_V.py  __init__.py
esis/flights/f2/: __init__.py  _wavelength.py
esis/flights/f2/optics/: __init__.py
esis/nsroc/: __init__.py  _timeline.py
esis/optics/: __init__.py  abc.py
esis/optics/_cameras/: __init__.py  _cameras.py  _cameras_test.py
esis/optics/_central_obscurations/: __init__.py  _central_obscurations.py  _central_obscurations_test.py
esis/optics/_distortions/: __init__.py  _distortions.py  _distortions_test.py
esis/optics/_field_stops/: __init__.py  _field_stops.py
esis/optics/_filters/: __init__.py  _filters.py  _filters_test.py
esis/optics/_front_apertures/: __init__.py  _front_apertures.py  _front_apertures_test.py
esis/optics/_gratings/: __init__.py  _gratings.py  _gratings_test.py
esis/optics/_instruments/: __init__.py  _instruments.py  _instruments_test.py
esis/optics/_primary_mirrors/: __init__.py  _primary_mirrors.py
esis/optics/_requirements/: __init__.py  _requirements.py
esis/optics/_sensors/: __init__.py  _sensors.py  _sensors_test.py
esis/optics/mixins/: __init__.py  _mixins.py
(+44 files in other folders)
