[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "euv-snapshot-imaging-spectrograph"
authors = [
    {name = "Roy T. Smart", email = "roytsmart@gmail.com"},
]
description = "A Python library for modeling and interpreting data from the EUV Snapshot Imaging Spectrograph (ESIS)."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "ipython",
    "numpy",
    "matplotlib",
    "astropy@git+https://github.com/astropy/astropy.git",
    "joblib",
    "optika@git+https://github.com/sun-data/optika.git",
    "msfc-ccd>=0.6.0",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest",
]
doc = [
    "pytest",
    "matplotlib",
    "graphviz",
    "sphinx-autodoc-typehints",
    "sphinxcontrib-bibtex",
    "pydata-sphinx-theme",
    "ipykernel",
    "jupyter-sphinx",
    "nbsphinx",
    "sphinx-codeautolink",
    "sphinx-favicon",
]

[project.urls]
Homepage = "https://github.com/esis-mission/esis"
Documentation = "https://esis-mission.github.io"

[tool.setuptools]
packages = ["esis"]

[tool.ruff.lint]
preview = true
select = [
    "E",
    "F",
    "D",
    "DOC",
]
ignore = [
    "DOC201",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
